Fix content alignment

--- a/source/stylesheets/layout/_main.scss
+++ b/source/stylesheets/layout/_main.scss
@@ -16,11 +16,16 @@
 	padding: $gutter;
 }
 
+.content-container {
+	padding: 0;
+}
+
 [role='main'] {
 	@include clearfix;
 
 	max-width: $max-width;
 
+	padding: $gutter;
 	margin-right: auto;
 	margin-left: auto;
 }
